fixed alignment issues

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,7 +28,6 @@ body {
   bottom: 20px;
   right: 20px;
   color: c.$sec-color;
-  border: 1px solid c.$maincolor;
   background: c.$maincolor;
   border-radius: 50%;
   height: 30px;
@@ -36,7 +35,6 @@ body {
   text-align: center;
   cursor: pointer;
   z-index: 5;
-  padding-left: 2px;
   position: fixed;
   animation: bulge infinite 2000ms;
   opacity: 0;
@@ -48,7 +46,6 @@ body {
   }
 
   & i {
-    transform: rotate(90deg);
     font-size: 25px;
     font-weight: bold;
   }
